--- a/Frontend/TEST/index.html
+++ b/Frontend/TEST/index.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./main.css">
-    <script src="./main.js"></script>
+    <title>Title Test</title>
+    <link rel="stylesheet" href="./css/main.css">
+    <script src="./js/main.js"></script>
+    <style>
+        div {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
     <div>Hello World</div>
+    
     
 </body>
 </html>
